# CPP_5_term

./: README.md
L1-CPP5term-Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  DefaultOperations.cpp  DefaultOperations.h  PluginsLoader.cpp  PluginsLoader.h  main.cpp
L1-CPP5term-Calculator/plugins/: ^.cpp  cos.cpp  ctg.cpp  ln.cpp  sin.cpp  sqrt.cpp  tg.cpp
